# multi_robot_simulator

exercise/: CMakeLists.txt
workspace/devel/: .catkin  .rosinstall  local_setup.sh
workspace/devel/lib/mrsim/: mrsim_node
workspace/devel/lib/pkgconfig/: mrsim.pc
workspace/devel/share/mrsim/cmake/: mrsimConfig.cmake
workspace/src/: README.md
workspace/src/mrsim/: CMakeLists.txt  package.xml
workspace/src/mrsim/include/: simulation.h  utils.h
